vpc.tf
resource "google_compute_network" "task2network-tf" {
  name = "task2networkgcp"
  auto_create_subnetworks = false
}
